variables.RunFour.scala.error
Erreur de compilation :
RunFour:2: error: not found: value nbBiscuit
while (nbBiscuit != 4) {
       ^RunFour:4: error: not found: value nbBiscuit
    nbBiscuit = nbBiscuit +1
    ^RunFour:6: error: not found: value nbBiscuit
  if (nbBiscuit != 4) {
      ^