variables.RunFour.scala.code
var nbbiscuit : Int = 0
while (nbBiscuit != 4) {
  if (estSurBiscuit()) {
    nbBiscuit = nbBiscuit +1
  }
  if (nbBiscuit != 4) {
    avance()
  }
}